--- a/index.html
+++ b/index.html
@@ -9,27 +9,56 @@
     <title>learning SCSS</title>
   </head>
   <body>
-    <!-- BEM notation - Block Element Modifier -->
-    <header class="header">
-      <nav class="header__nav">
-        <ul class="header__nav__link-list">
-          <li class="header__nav__link-list__item">
-            <a class="header__nav__link-list__item__link" href=""></a>
-          </li>
-          <li class="header__nav__link-list__item">
-            <a class="header__nav__link-list__item__link" href=""></a>
-          </li>
-          <li class="header__nav__link-list__item">
-            <a class="header__nav__link-list__item__link" href=""></a>
-          </li>
-          <li class="header__nav__link-list__item">
-            <a
-              class="header__nav__link-list__item__link header__nav__link-list__item__link--red"
-              href=""
-            ></a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <footer class="footer">
+      <div class="container-lg">
+        <div class="row">
+          <div class="col-lg-6 col-12">
+            <div class="footer__left">
+              <img src="" alt="" />
+              <p>
+                We spend our days working with top-performing remote teams.
+                <br />
+                Every two weeks, we share everything we’ve learned about remote
+                work in a short newsletter. It’ll help you work and hire better.
+                Sign up below––it takes less than 10 seconds.
+              </p>
+              <input type="text" />
+            </div>
+          </div>
+          <div class="col-lg-6 col-12">
+            <div class="footer__right">
+              <div class="d-flex justify-content-between">
+                <div>
+                  <h5>Company</h5>
+                  <ul>
+                    <li>Home</li>
+                    <li>Home</li>
+                    <li>Home</li>
+                    <li>Home</li>
+                    <li>Home</li>
+                  </ul>
+                </div>
+                <div>
+                  <h5>Resources</h5>
+                  <ul>
+                    <li>About</li>
+                    <li>About</li>
+                    <li>About</li>
+                    <li>About</li>
+                    <li>About</li>
+                    <li>About</li>
+                    <li>About</li>
+                    <li>About</li>
+                  </ul>
+                  <button type="button" class="btn btn-primary btn--customized">
+                    Primary
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
